--- a/.github/workflows/vignette.yml
+++ b/.github/workflows/vignette.yml
@@ -26,7 +26,11 @@ jobs:
       - name: Check if actor has write permissions
         id: check_permissions
         run: |
-          PERMISSION=$(jq -r '.repository.permissions.push' "$GITHUB_EVENT_PATH")
+          RESPONSE=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" \
+                        -H "Accept: application/vnd.github.v3+json" \
+                        "https://api.github.com/repos/${{ github.repository }}/collaborators/${{ github.actor }}/permission")
+
+          PERMISSION=$(echo "$RESPONSE" | jq -r '.permission')
 
           if [ "$PERMISSION" = "write" ] || [ "$PERMISSION" = "admin" ]; then
             echo "has_permission=true" >> $GITHUB_OUTPUT
