--- a/.github/workflows/vignette.yml
+++ b/.github/workflows/vignette.yml
@@ -12,7 +12,29 @@ env:
   cache-version: "cache-v1"
 
 jobs:
+  check-permissions:
+    runs-on: ubuntu-latest
+    outputs:
+      has_permission: ${{ steps.check_permissions.outputs.has_permission }}
+    steps:
+      - name: Check if actor has permission
+        id: check_permissions
+        run: |
+          # Define allowed actors
+          ALLOWED_ACTORS=("zktuong" "Jiawei-Yu10")  # Replace these with the actual GitHub usernames
+
+          if [[ " ${ALLOWED_ACTORS[@]} " =~ " ${GITHUB_ACTOR} " ]]; then
+            echo "has_permission=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_permission=false" >> $GITHUB_OUTPUT
+          fi
+      - name: Debug permissions output
+        run: |
+          echo "Has permission: ${{ steps.check_permissions.outputs.has_permission }}"
   vignette:
+    needs:
+      - check-permissions
+    if: needs.check-permissions.outputs.has_permission == 'true'
     defaults:
       run:
         shell: bash -l {0}
