--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,7 +52,7 @@ Suggests:
     BiocStyle,
     knitr,
     RColorBrewer,
-    scater，
+    scater,
     scRepertoire
 VignetteBuilder: knitr
 URL: https://www.github.com/tuonglab/dandelionR/
