rename splitTCR and associated function names and removing some notes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,7 @@ Collate:
     'miloUmap.R'
     'projectPseudotimeToCell.R'
     'setupVdjPseudobulk.R'
-    'splitTCR.R'
+    'splitCTgene.R'
     'vdjPseudobulk.R'
 Imports:
     BiocGenerics,
