add another vignette to show how dandelionR can interface with scRepertoire (#37)
* Create fromSceAndVDJ.Rmd

* add scRepertoire

* Update DESCRIPTION

* Update vignette.yml

* fix the bugs

* update notebooks

* Update _pkgdown.yml

* fix option and update docs

* oops missing commas

* make documents fit the line width

* missing reference tab

* modify message

* fix some typos, add citation and rename the vignette names

* add jiawei's changes

* modify parameter filter_pattern

Because character "None" will introduced by splitTCR, so the filter_pattern = ",|None|No_contig" is suitable for both dandelion demo and the scRepetoire combined data. I think it is better to let user decide whether to filter the unmapped data rather than choose the filter_pattern

* Update setupVdjPseudobulk.R

At the end of the main TCR extraction process, the column to be filtered will be generated automatically. What the user needs to specify is whether to filter by this gene, not the column prefix.

* debugs

* update document

* debugs in CITATION

* Update CITATION

* rename files to get rid of warnings

* fix a few more warnings/notes

* rename splitTCR and associated function names and removing some notes

* ok fix the vapply issue

---------

Co-authored-by: Zewen Kelvin Tuong <z.tuong@uq.edu.au>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,14 +5,12 @@ Authors@R:
     c(person(given="Jiawei", family="Yu", email = "jiawei.yu@uq.edu.au", role = c("aut"), comment = c(ORCID = "0009-0005-9170-7881")),
       person(given="Nicholas", family="Borcherding", email = "borcherding@wustl.edu", role = c("aut"), comment = c(ORCID = "0000-0003-1427-6342")),
       person(given="Kelvin", family="Tuong", email = "z.tuong@uq.edu.au", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-6735-6808")))
-Description: dandelionR is an R package for performing single-cell immune repertoire trajectory analysis, based on the original python implementation. It provides all the necessary tools to interface with scRepertoire and a custom implementation of absorbing markov chain for pseudotime inference, inspired based on the palantir python package.
+Description: dandelionR is an R package for performing single-cell immune repertoire trajectory analysis, based on the original python implementation. It provides the necessary functions to interface with scRepertoire and a custom implementation of an absorbing Markov chain for pseudotime inference, inspired by the Palantir Python package.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 biocViews: Software, ImmunoOncology, SingleCell
-LazyData: true
-LazyDataCompression: xz
 Collate:
     'check.R'
     'constructMarkovChain.R'
@@ -29,7 +27,7 @@ Collate:
     'miloUmap.R'
     'projectPseudotimeToCell.R'
     'setupVdjPseudobulk.R'
-    'splitTCR.R'
+    'splitCTgene.R'
     'vdjPseudobulk.R'
 Imports:
     BiocGenerics,
@@ -52,7 +50,8 @@ Suggests:
     BiocStyle,
     knitr,
     RColorBrewer,
-    scater
+    scater,
+    scRepertoire
 VignetteBuilder: knitr
 URL: https://www.github.com/tuonglab/dandelionR/
 BugReports: https://www.github.com/tuonglab/dandelionR/issues
