--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -79,9 +79,7 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           packages: covr
-          extra-packages: |
-            any::rcmdcheck
-            testthat
+          extra-packages: any::rcmdcheck
 
       - uses: r-lib/actions/check-r-package@v2
 
