--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -82,10 +82,12 @@ jobs:
 
       - uses: r-lib/actions/check-r-package@v2
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
+      - name: Setup to test coverage
+        uses: r-lib/actions/setup-r-dependencies@v2
         if: needs.check-permissions.outputs.has_permission == 'true' && matrix.config.os == 'ubuntu-latest'
         with:
           packages: covr
+
       - name: Test coverage
         if: needs.check-permissions.outputs.has_permission == 'true' && matrix.config.os == 'ubuntu-latest'
         run: |
