--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -86,7 +86,7 @@ jobs:
           packages: covr
 
       - name: Test coverage
-        if: steps.check-permissions.outputs.has_permission == 'true' && matrix.config.os == 'ubuntu-latest'
+        if: steps.check_permissions.outputs.has_permission == 'true' && matrix.config.os == 'ubuntu-latest'
         run: |
           Rscript -e 'covr::codecov(token = "${{ secrets.CODECOV_TOKEN }}")'
         shell: bash -l {0}
