ok forgot to only run check on ubuntu

--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -64,10 +64,11 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
 
       - name: Check if actor has permission
+        if: matrix.config.os == 'ubuntu-latest'
         id: check_permissions
         run: |
           # Define allowed actors
-          ALLOWED_ACTORS=("zktuong", "Jiawei-Yu10")  # Replace these with the actual GitHub usernames
+          ALLOWED_ACTORS=("zktuong" "Jiawei-Yu10")  # Replace these with the actual GitHub usernames
 
           if [[ " ${ALLOWED_ACTORS[@]} " =~ " ${GITHUB_ACTOR} " ]]; then
             echo "has_permission=true" >> $GITHUB_OUTPUT
