--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -60,6 +60,7 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::rcmdcheck
+          packages: any::covr
 
       - uses: r-lib/actions/check-r-package@v2
 
@@ -79,12 +80,6 @@ jobs:
       - name: Debug permissions output
         run: |
           echo "Has permission: ${{ steps.check_permissions.outputs.has_permission }}"
-
-      - name: Setup to test coverage
-        uses: r-lib/actions/setup-r-dependencies@v2
-        if: steps.check_permissions.outputs.has_permission == 'true' && matrix.config.os == 'ubuntu-latest'
-        with:
-          packages: covr
 
       - name: Test coverage
         if: steps.check_permissions.outputs.has_permission == 'true' && matrix.config.os == 'ubuntu-latest'
