--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,10 @@ importFrom(Matrix,solve)
 importFrom(Matrix,sparseMatrix)
 importFrom(Matrix,summary)
 importFrom(Matrix,t)
+importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
+importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(bluster,makeKNNGraph)
 importFrom(destiny,eigenvalues)
