--- a/.github/workflows/vignette.yml
+++ b/.github/workflows/vignette.yml
@@ -80,6 +80,11 @@ jobs:
         with:
           extra-packages: pkgdown
 
+      - name: Install specific version of pillar to avoid weird error message
+        run: |
+          Rscript -e 'remotes::install_version("pillar", "1.9.0")'
+        shell: bash -l {0}
+
       - name: Install scRepertoire from github
         run: |
           Rscript -e 'remotes::install_github("ncborcherding/scRepertoire")'
