ok put it in suggests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,7 +52,8 @@ Suggests:
     RColorBrewer,
     scater,
     scRepertoire,
-    testthat
+    testthat,
+    pillar (< 1.10.0)
 VignetteBuilder: knitr
 URL: https://www.github.com/tuonglab/dandelionR/
 BugReports: https://www.github.com/tuonglab/dandelionR/issues
