Revert "ok put it in suggests"
This reverts commit cfe327be13fdaf5ca9bc81af3a7bb200d8ff055e.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,8 +52,7 @@ Suggests:
     RColorBrewer,
     scater,
     scRepertoire,
-    testthat,
-    pillar (< 1.10.0)
+    testthat
 VignetteBuilder: knitr
 URL: https://www.github.com/tuonglab/dandelionR/
 BugReports: https://www.github.com/tuonglab/dandelionR/issues
