--- a/.github/workflows/vignette.yml
+++ b/.github/workflows/vignette.yml
@@ -76,11 +76,6 @@ jobs:
           key: ${{ env.cache-version }}-${{ matrix.config.os }}-biocversion-${{ steps.BIOC.outputs.version}}-r-${{ steps.R.outputs.version}}-${{ hashFiles('.github/depends.Rds') }}
           restore-keys: ${{ env.cache-version }}-${{ matrix.config.os }}-biocversion-${{ steps.BIOC.outputs.version}}-r-${{ steps.R.outputs.version}}-
 
-      - name: Install specific version of pillar to avoid weird error message
-        run: |
-          Rscript -e 'remotes::install_version("pillar", "1.9.0")'
-        shell: bash -l {0}
-
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: pkgdown
@@ -88,6 +83,11 @@ jobs:
       - name: Install scRepertoire from github
         run: |
           Rscript -e 'remotes::install_github("ncborcherding/scRepertoire")'
+        shell: bash -l {0}
+
+      - name: Install specific version of pillar to avoid weird error message
+        run: |
+          Rscript -e 'remotes::install_github("r-lib/pillar@v1.9.0")'
         shell: bash -l {0}
 
       - name: Install package
