--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -44,10 +44,10 @@ jobs:
         run: |
           brew install gsl
 
-      - name: Install windows dependencies
-        if: ${{ matrix.config.os == 'windows-latest' }}
-        run: |
-          choco install gsl
+      # - name: Install windows dependencies
+      #   if: ${{ matrix.config.os == 'windows-latest' }}
+      #   run: |
+      #     choco install gsl
 
       - name: Get R version
         id: R
