Build against r-devel and bioc-devel (#50)
* Update R-CMD-check.yml

* Update vignette.yml

* missing gsl

* fix workflow

* what about this

* hmm

* ok windows didn't need it.

--- a/.github/workflows/vignette.yml
+++ b/.github/workflows/vignette.yml
@@ -52,7 +52,17 @@ jobs:
         uses: grimbough/bioc-actions/setup-bioc@v1
         id: install-r
         with:
-          bioc-version: release
+          bioc-version: devel
+
+      - name: Install ubuntu dependencies
+        if: ${{ matrix.config.os == 'ubuntu-latest' }}
+        run: |
+          sudo apt-get update && sudo apt-get install -y libgsl-dev
+
+      - name: Install macos dependencies
+        if: ${{ matrix.config.os == 'macos-latest' }}
+        run: |
+          brew install gsl
 
       - name: Get R version
         id: R
