--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -32,7 +32,17 @@ jobs:
         uses: grimbough/bioc-actions/setup-bioc@v1
         id: install-r
         with:
-          bioc-version: release
+          bioc-version: devel
+
+      - name: Install ubuntu dependencies
+        if: ${{ matrix.config.os == 'ubuntu-latest' }}
+        run: |
+          sudo apt-get update && sudo apt-get install -y libgsl-dev
+
+      - name: Install macos dependencies
+        if: ${{ matrix.config.os == 'macos-latest' }}
+        run: |
+          brew install gsl
 
       - name: Get R version
         id: R
@@ -79,7 +89,7 @@ jobs:
       - name: Debug permissions output
         run: |
           echo "Has permission: ${{ steps.check_permissions.outputs.has_permission }}"
-          
+
       - name: Setup to test coverage
         uses: r-lib/actions/setup-r-dependencies@v2
         if: steps.check_permissions.outputs.has_permission == 'true' && matrix.config.os == 'ubuntu-latest'
