first wave of review changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,9 @@ export(projectPseudotimeToCell)
 export(setupVdjPseudobulk)
 export(vdjPseudobulk)
 import(SingleCellExperiment)
-import(miloR)
 importFrom(BiocGenerics,type)
 importFrom(MASS,ginv)
+importFrom(Matrix,Matrix)
 importFrom(Matrix,solve)
 importFrom(Matrix,sparseMatrix)
 importFrom(Matrix,summary)
