nhoods giving me grief

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,9 +28,9 @@ importFrom(igraph,components)
 importFrom(igraph,ends)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(methods,is)
+importFrom(miloR,"nhoods<-")
 importFrom(miloR,Milo)
 importFrom(miloR,graph)
-importFrom(miloR,nhoods)
 importFrom(purrr,map)
 importFrom(purrr,pmap)
 importFrom(rlang,abort)
