--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,9 @@ export(projectPseudotimeToCell)
 export(setupVdjPseudobulk)
 export(vdjPseudobulk)
 import(SingleCellExperiment)
-import(miloR)
 importFrom(BiocGenerics,type)
 importFrom(MASS,ginv)
+importFrom(Matrix,Matrix)
 importFrom(Matrix,solve)
 importFrom(Matrix,sparseMatrix)
 importFrom(Matrix,summary)
@@ -28,9 +28,9 @@ importFrom(igraph,components)
 importFrom(igraph,ends)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(methods,is)
+importFrom(miloR,"nhoods<-")
 importFrom(miloR,Milo)
 importFrom(miloR,graph)
-importFrom(miloR,nhoods)
 importFrom(purrr,map)
 importFrom(purrr,pmap)
 importFrom(rlang,abort)
