--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ importFrom(methods,is)
 importFrom(miloR,"nhoods<-")
 importFrom(miloR,Milo)
 importFrom(miloR,graph)
+importFrom(miloR,nhoods)
 importFrom(purrr,map)
 importFrom(purrr,pmap)
 importFrom(rlang,abort)
