--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ importFrom(igraph,components)
 importFrom(igraph,ends)
 importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(methods,is)
+importFrom(miloR,"nhoods<-")
 importFrom(miloR,Milo)
 importFrom(miloR,graph)
 importFrom(purrr,map)
