--- a/.github/workflows/vignette.yml
+++ b/.github/workflows/vignette.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Install macos dependencies
         if: ${{ matrix.config.os == 'macos-latest' }}
         run: |
-          brew install gsl graphicsmagick
+          brew install gsl
 
       - name: Get R version
         id: R
