--- a/.github/workflows/vignette.yml
+++ b/.github/workflows/vignette.yml
@@ -125,8 +125,7 @@ jobs:
           pkgdown::deploy_to_branch(subdir = if (nzchar(subdir)) subdir, clean = nzchar(subdir))
 
           # Report deployed site URL
-          # deployed_url <- file.path(pkg$meta$url, subdir)
-          deployed_url <- file.path("https://tuonglab.github.io/dandelionR/", subdir)
+          deployed_url <- file.path(pkg$meta$url, subdir)
           cat(sprintf('url=%s', deployed_url), file = Sys.getenv("GITHUB_OUTPUT"), append = TRUE)
 
       - name: Notify pkgdown deployment
