--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -61,7 +61,7 @@ jobs:
         - name: Pre-install BiocParallel binary
         run: |
         Rscript -e 'install.packages("BiocManager")'
-        Rscript -e 'BiocManager::install("BiocParallel", ask=FALSE, update=FALSE)'
+        Rscript -e 'BiocManager::install("BiocParallel", version = "3.18", ask=FALSE, update=FALSE)'
 
       - name: Get Bioconductor version
         id: BIOC
