--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -58,15 +58,15 @@ jobs:
           rm VERSION
         shell: bash -l {0}
         
-        - name: Pre-install BiocParallel binary
+      - name: Pre-install BiocParallel binary
         run: |
-        Rscript -e 'install.packages("BiocManager")'
-        Rscript -e 'BiocManager::install("BiocParallel", version = "3.18", ask=FALSE, update=FALSE)'
-        
-        - name: Install immApex and scRepertoire
+          Rscript -e 'install.packages("BiocManager")'
+          Rscript -e 'BiocManager::install("BiocParallel", version = "3.18", ask=FALSE, update=FALSE)'
+          
+      - name: Install immApex and scRepertoire
         run: |
-        remotes::install_github("ncborcherding/immApex")
-        remotes::install_github("ncborcherding/scRepertoire")
+          Rscript -e 'remotes::install_github("ncborcherding/immApex")'
+          remotes::install_github("ncborcherding/scRepertoire")
 
       - name: Get Bioconductor version
         id: BIOC
