--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install macos dependencies
         if: ${{ matrix.config.os == 'macos-latest' }}
         run: |
-          brew install gettext libomp gsl
+          brew install gettext libomp gsl boost
           mkdir -p ~/.R
           echo 'PKG_CPPFLAGS=-I/opt/homebrew/opt/gettext/include -I/opt/homebrew/opt/libomp/include' >> ~/.R/Makevars
           echo 'PKG_LIBS=-L/opt/homebrew/opt/gettext/lib -L/opt/homebrew/opt/libomp/lib -lomp' >> ~/.R/Makevars
