--- a/.github/workflows/R-CMD-check.yml
+++ b/.github/workflows/R-CMD-check.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         config:
           - { os: ubuntu-latest }
-          - { os: macos-latest } # disabling until https://github.com/r-lib/actions/issues/950 is resolved
+          # - { os: macos-latest } # disabling because biocParallel is not compiling 29/04/2025
           - { os: windows-latest }
     runs-on: ${{ matrix.config.os }}
     env:
@@ -32,7 +32,7 @@ jobs:
         uses: grimbough/bioc-actions/setup-bioc@v1
         id: install-r
         with:
-          bioc-version: devel
+          bioc-version: release
 
       - name: Install ubuntu dependencies
         if: ${{ matrix.config.os == 'ubuntu-latest' }}
@@ -42,7 +42,7 @@ jobs:
       - name: Install macos dependencies
         if: ${{ matrix.config.os == 'macos-latest' }}
         run: |
-          brew install gettext libomp gsl
+          brew install gettext libomp gsl boost
           mkdir -p ~/.R
           echo 'PKG_CPPFLAGS=-I/opt/homebrew/opt/gettext/include -I/opt/homebrew/opt/libomp/include' >> ~/.R/Makevars
           echo 'PKG_LIBS=-L/opt/homebrew/opt/gettext/lib -L/opt/homebrew/opt/libomp/lib -lomp' >> ~/.R/Makevars
@@ -57,6 +57,15 @@ jobs:
           echo "version=$(head -1 VERSION | awk '{print $3}')" >> $GITHUB_OUTPUT
           rm VERSION
         shell: bash -l {0}
+
+      # - name: Pre-install BiocParallel binary
+      #   run: |
+      #     Rscript -e 'install.packages("BiocManager")'
+
+      # - name: Install immApex and scRepertoire
+      #   run: |
+      #     Rscript -e 'remotes::install_github("ncborcherding/immApex")'
+      #     remotes::install_github("ncborcherding/scRepertoire")
 
       - name: Get Bioconductor version
         id: BIOC
